--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,21 +5,127 @@
   |============================
 */
 @import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
-
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:wght@300;400;700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=block');
+body {
+  font-family: 'Montserrat', sans-serif;
   font-size: 16px;
-  line-height: 24px;
   font-weight: 400;
+  font-style: normal;
+  background-color: rgba(70, 211, 169, 0.3);
+}
 
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
+.form {
+  text-align: center;
+}
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+.input {
+  padding: 6px;
+  width: 258px;
+  height: 26px;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  outline: none;
+
+  background-color: transparent;
+}
+
+.input::placeholder {
+  color: #808080;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
+  letter-spacing: 0.64px;
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(3, 362px);
+  gap: 24px;
+  align-items: center;
+  justify-content: center;
+  padding: 24px;
+}
+
+.img-gallery {
+  height: 200px;
+  object-fit: cover;
+  border-radius: 6px;
+}
+
+.element-gallery {
+  border: 1px solid #808080;
+  border-radius: 6px;
+  background-color: rgba(145, 209, 169, 0.6);
+}
+
+.list-info {
+  display: flex;
+  padding: 4px 24px;
+  justify-content: space-between;
+}
+
+.item-info {
+  text-align: center;
+}
+
+.title-text {
+  color: #2e2f42;
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 16px; /* 133.333% */
+  letter-spacing: 0.48px;
+}
+
+.text {
+  color: #2e2f42;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 24px; /* 200% */
+  letter-spacing: 0.48px;
+}
+
+.click-btn {
+  padding: 8px 16px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 8px;
+  background: rgba(0, 125, 87, 0.7);
+  border: none;
+
+  color: #fff;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px; /* 150% */
+  letter-spacing: 0.64px;
+}
+
+.click-btn:hover {
+  background-color: rgba(0, 125, 58, 0.5);
+}
+
+.loader {
+  margin: 0 auto;
+
+  width: 48px;
+  height: 48px;
+  border: 5px solid #fff;
+  border-bottom-color: #ff3d00;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.btn-load-more {
+  margin: 0 auto;
 }
